# SDIZO2

./: CMakeLists.txt  main.cpp
BinaryHeap/: BinaryHeap.cpp  BinaryHeap.h
Graph/: ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h
Measurments/: ListGMeasurments.cpp  ListGMeasurments.h  MatrixGMeasurments.cpp  MatrixGMeasurments.h  MeasureTime.cpp  MeasureTime.h
Menu/: ListGraphMenu.cpp  ListGraphMenu.h  MatrixGraphMenu.cpp  MatrixGraphMenu.h
